--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="width: 100vw;height: 100vh;">
-    <div class="sketchfab-embed-wrapper"> <iframe title="Trimedia Servicios" frameborder="0" allowfullscreen mozallowfullscreen="true" width="1366" height="768" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/a2735d3f16704667b1058763dd14ea8a/embed?autospin=1&autostart=1&ui_theme=dark"> </iframe> </div>
+    <div class="sketchfab-embed-wrapper"> <iframe title="Trimedia Servicios" frameborder="0" allowfullscreen mozallowfullscreen="true" width="min-width: 100vh;" height="min-height: 100vh;" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/a2735d3f16704667b1058763dd14ea8a/embed?autospin=1&autostart=1&ui_theme=dark"> </iframe> </div>
     
 </body>
 </html>
