--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trimedia Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="width: 100vw;height: 100vh;">
-    <div class="sketchfab-embed-wrapper"> <iframe title="Trimedia Servicios" frameborder="0" allowfullscreen mozallowfullscreen="true" width="min-width: 100vh;" height="min-height: 100vh;" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/a2735d3f16704667b1058763dd14ea8a/embed?autospin=1&autostart=1&ui_theme=dark"> </iframe> </div>
-    
+<body>
+    <script src="main.js"></script>
 </body>
 </html>
