--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trimedia Web</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
+    <header class="areaSup">
+
+    </header>
+    <main class="areaCentral">
+
+    </main>
+    <footer class="areaInf">
+        <div class="row d-flex justify-content-center">
+            <div class="col text-white text-center">
+                Instagram
+            </div>
+            <div class="col text-white text-center">
+                Whatsapp
+            </div>
+            <div class="col text-white text-center">
+                Mail
+            </div>
+        </div>
+    </footer>
+
+
+
+
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
