--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <title>Trimedia Web</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,20 +12,20 @@
 
 <body>
     <header class="areaSup">
-
+        <img src="images/TRIMEDIALOGO.png" alt="logo" class="logo mt-4">
     </header>
     <main class="areaCentral">
 
     </main>
     <footer class="areaInf">
-        <div class="row d-flex justify-content-center">
-            <div class="col text-white text-center">
+        <div class="row d-flex justify-content-center m-0">
+            <div class="col text-white text-center m-0">
                 Instagram
             </div>
-            <div class="col text-white text-center">
+            <div class="col text-white text-center m-0">
                 Whatsapp
             </div>
-            <div class="col text-white text-center">
+            <div class="col text-white text-center m-0">
                 Mail
             </div>
         </div>
