--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
 </head>
 
 <body>
+    <!--EFECTO ANIMADO LINEAS CAYENDO-->
+    <div class="lines">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
     <header class="areaSup">
+        <a href="index.html" class="d-flex justify-content-center"><img src="images/TRIMEDIALOGO.png" alt="logo" class="logo mt-4"></a>
 
-        <img src="images/TRIMEDIALOGO.png" alt="logo" class="logo mt-4">
+        <div class="text-center text-white mt-2">
+            <span id="txtAnimado" class="fs-5"></span>
+        </div>
     </header>
     <main class="areaCentral d-flex flex-column align-content-center">
         <!--PANTALLA CONTACTO-->
@@ -82,10 +92,8 @@
             </div>
         </div>
     </footer>
-
-
-
-
+    <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
