--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="line"></div>
     </div>
     <header class="areaSup">
-        <a href="index.html" class="d-flex justify-content-center"><img src="images/TRIMEDIALOGO.png" alt="logo" class="logo mt-4"></a>
+        <a href="index.html" class="d-flex justify-content-center"><img src="images/Logo.png" alt="logo" class="logo mt-4"></a>
 
         <div class="text-center text-white mt-2">
-            <span id="txtAnimado" class="fs-5"></span>
+            <span id="txtAnimado" class=""></span>
         </div>
     </header>
     <main class="areaCentral d-flex flex-column align-content-center">
