--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="col-lg-10 col-9 card ps-2 pe-2 me-5 ms-5">
                 <div class="card-body d-flex flex-column justify-content-center">
                     <p class="card-text text-center text-white mb-0">
-                        Videojuegos para educación, capacitación y publicidad(Edugames/Advergames).
-                        <br>
+                        Videojuegos para educación, capacitación y publicidad.
+                        
                         Activaciones de marca BTL.
 
                     </p>
@@ -90,8 +90,11 @@
             <div class="col text-white text-center m-0">
                 <button type="button" class="btn btn-outline-light" id="meet" onclick="mostrarBTL()">BTL</button>
             </div>
+            <h5 class="text-center mt-3 creditos">Powered by Trimedia Team </h5>
         </div>
     </footer>
+    <audio src="audio/fxTap.mp3" id="tap" muted></audio>
+    <!-- <audio src="audio/websong.ogg" loop autoplay></audio> -->
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
