--- a/index.html
+++ b/index.html
@@ -26,53 +26,14 @@
         </div>
     </header>
     <main class="areaCentral d-flex flex-column align-content-center">
-        <!--PANTALLA CONTACTO-->
-        <section id="pantallaHSI" class="row">
+        <!--PANTALLA FLOTANTE-->
+        <section id="pantalla" class="row">
             <div class="col-lg-10 col-9 card ps-2 pe-2 me-5 ms-5">
                 <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text text-center text-white mb-0">Desarrollo de software & hardware
-                        para experiencias interactivas.
-                    </p>
+                    <p class="card-text text-center text-white mb-0" id="info"></p>
                     <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima.gif" autoplay loop class="videos"></img>
+                        <img src="" autoplay loop class="videos" id="animado"></img>
                     </div>
-
-                    <a href="#" class="btn btn-outline-warning">Mas Info</a>
-                </div>
-
-            </div>
-        </section>
-        <!--PANTALLA VR-->
-        <section id="pantallaVR" class="row ">
-            <div class="col-lg-10 col-9 card ps-2 pe-2 me-5 ms-5">
-                <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text text-center text-white mb-0">Diseño de videojuegos & juegos para Web, Realidad
-                        Virtual (VR), Realidad Aumentada (AR).
-
-                    </p>
-                    <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima3.gif" autoplay loop class="videos"></img>
-                    </div>
-
-                    <a href="#" class="btn btn-outline-warning">Mas Info</a>
-                </div>
-
-            </div>
-        </section>
-        <!--PANTALLA BTL-->
-        <section id="pantallaBTL" class="row ">
-            <div class="col-lg-10 col-9 card ps-2 pe-2 me-5 ms-5">
-                <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text text-center text-white mb-0">
-                        Videojuegos para educación, capacitación y publicidad.
-                        
-                        Activaciones de marca BTL.
-
-                    </p>
-                    <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima2.gif" autoplay loop class="videos"></img>
-                    </div>
-
                     <a href="#" class="btn btn-outline-warning">Mas Info</a>
                 </div>
 
@@ -82,13 +43,13 @@
     <footer class="areaInf">
         <div class="row d-flex justify-content-center m-0">
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="instagram" onclick="mostrarVR()">VR/AR</button>
+                <button type="button" class="btn btn-outline-light" id="vr" onclick="mostrarPantalla(this)">VR/AR</button>
             </div>
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="hsi" onclick="mostrarHSI()">HSI</button>
+                <button type="button" class="btn btn-outline-light" id="hsi" onclick="mostrarPantalla(this)">HSI</button>
             </div>
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="meet" onclick="mostrarBTL()">BTL</button>
+                <button type="button" class="btn btn-outline-light" id="btl" onclick="mostrarPantalla(this)">BTL</button>
             </div>
             <h5 class="text-center mt-3 creditos">Powered by Trimedia Team </h5>
         </div>
