--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <meta name="description" content="Trimedia Team">
+    <meta name="keywords" content="VR,AR,interactivo,videojuegos,BTL,realidad virtual,realidad aumentada">
     <title>Trimedia Web</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,7 +34,13 @@
                 <div class="card-body d-flex flex-column justify-content-center">
                     <p class="card-text text-center text-white mb-0" id="info"></p>
                     <div class="w-100 d-flex justify-content-center ">
-                        <img src="" autoplay loop class="videos" id="animado"></img>
+                        <img src="videos/gifAnima.gif" autoplay loop class="videos" id="animado1" style="display:none"></img>
+                    </div>
+                    <div class="w-100 d-flex justify-content-center ">
+                        <img src="videos/gifAnima2.gif" autoplay loop class="videos" id="animado2"></img>
+                    </div>
+                    <div class="w-100 d-flex justify-content-center ">
+                        <img src="videos/gifAnima3.gif" autoplay loop class="videos" id="animado3"></img>
                     </div>
                     <a href="#" class="btn btn-outline-warning">Mas Info</a>
                 </div>
