--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="shortcut icon" href="#" type="image/x-icon" />
 </head>
 
@@ -28,21 +29,25 @@
         </div>
     </header>
     <main class="areaCentral d-flex flex-column align-content-center">
+        <!--FONDO ANIMADO-->
+        <section class="d-flex flex-column logocontent">
+            <img src="videos/loop3D.gif" alt="loopLogo" class="logo3d">
+        </section>
         <!--PANTALLA FLOTANTE-->
         <section id="pantalla" class="row">
-            <div class="col-lg-10 col-9 card ps-2 pe-2 me-5 ms-5">
+            <div class="col-lg-6 col-9 card me-2 ms-2" >
                 <div class="card-body d-flex flex-column justify-content-center">
                     <p class="card-text text-center text-white mb-0" id="info"></p>
                     <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima.gif" autoplay loop class="videos" id="animado1" style="display:none"></img>
+                        <img src="images/HSIimg.png" autoplay loop class="img  mt-3 imgCard" id="animado1" style="display:none"></img>
                     </div>
                     <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima2.gif" autoplay loop class="videos" id="animado2"></img>
+                        <img src="images/HSIimg.png" autoplay loop class="img  mt-3 imgCard" id="animado2"></img>
                     </div>
                     <div class="w-100 d-flex justify-content-center ">
-                        <img src="videos/gifAnima3.gif" autoplay loop class="videos" id="animado3"></img>
+                        <img src="images/HSIimg.png" autoplay loop class="img mt-3 imgCard" id="animado3"></img>
                     </div>
-                    <a href="#" class="btn btn-outline-warning">Mas Info</a>
+                    <a href="#" class="btn btn-outline-warning mt-3">Mas Info</a>
                 </div>
 
             </div>
@@ -51,13 +56,13 @@
     <footer class="areaInf">
         <div class="row d-flex justify-content-center m-0">
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="vr" onclick="mostrarPantalla(this)">VR/AR</button>
+                <img src="images/hsicon.png" alt="hsi" class="logobtn"onclick="mostrarPantalla(this)" id="hsi">
             </div>
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="hsi" onclick="mostrarPantalla(this)">HSI</button>
+                <img src="images/vricon.png" alt="vr" class="logobtn"onclick="mostrarPantalla(this)" id="vr">
             </div>
             <div class="col text-white text-center m-0">
-                <button type="button" class="btn btn-outline-light" id="btl" onclick="mostrarPantalla(this)">BTL</button>
+                <img src="images/btlicon.png" alt="btl" class="logobtn"onclick="mostrarPantalla(this)" id="btl">
             </div>
             <h5 class="text-center mt-3 creditos">Powered by Trimedia Team </h5>
         </div>
