--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div class="line"></div>
         <div class="line"></div>
     </div>
+    <!--FONDO ANIMADO-->
+    <div class="logo3d ">
+        <img src="videos/loop3D.gif" alt="loopLogo" class="animaLogo">
+    </div>
     <header class="areaSup">
         <a href="index.html" class="d-flex justify-content-center"><img src="images/Logo.png" alt="logo" class="logo mt-4"></a>
 
@@ -29,10 +33,7 @@
         </div>
     </header>
     <main class="areaCentral d-flex flex-column align-content-center">
-        <!--FONDO ANIMADO-->
-        <section class="d-flex flex-column logocontent">
-            <img src="videos/loop3D.gif" alt="loopLogo" class="logo3d">
-        </section>
+        
         <!--PANTALLA FLOTANTE-->
         <section id="pantalla" class="row">
             <div class="col-lg-6 col-9 card me-2 ms-2" >
@@ -47,7 +48,7 @@
                     <div class="w-100 d-flex justify-content-center ">
                         <img src="images/HSIimg.png" autoplay loop class="img mt-3 imgCard" id="animado3"></img>
                     </div>
-                    <a href="#" class="btn btn-outline-warning mt-3">Mas Info</a>
+                    <a href="#" class="btn btn-outline-warning mt-3" id="informacion">Mas Info</a>
                 </div>
 
             </div>
