--- a/index.html
+++ b/index.html
@@ -53,14 +53,20 @@
 
             </div>
         </section>
-        <!--PANTALLA FLOTANTE-->
+        <!--PANTALLA FORMULARIO-->
         <section id="formulario" class="row">
             <div class="col-lg-6 col-9 card me-2 ms-2" id="tarjeta">
                 <div class="card-body d-flex flex-column justify-content-center">
-                    <p class="card-text text-center text-white mb-0"> FORMULARIO</p>
-                    <a href="#" class="btn btn-outline-light mt-3" id="btnEnviar" >Enviar</a>
+                    <div class="container">
+                        <p class="card-text text-center text-white mb-0"> Consultas y Reuniones</p>
+                        <!-- <form onsubmit="emailSend(); reset(); return false;">
+                            <input type="text" id="name" placeholder="name" name="name" required>
+                            <input type="text" id="phone" placeholder="phone" name="phone" required>
+                            <input type="email" id="email" placeholder="email" name="email" required>
+                            <button type="submit" class="btn btn-outline-light mt-3" id="btnEnviar">Enviar</button>
+                        </form> -->
+                    </div> 
                 </div>
-
             </div>
         </section>
     </main>
@@ -83,9 +89,12 @@
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
