--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class=" card" id="tarjeta">
             <div class="row  d-flex flex-column justify-content-center align-content-center" id="caja">
                 <div class="d-flex flex-column justify-content-center align-content-center columna" id="caja2">
-                    <a href="https://www.instagram.com/trimediaxr/"><img src="images/insta.png" alt="instagram" class="mt-2"></a>
+                    <a href="https://www.instagram.com/trimediaxr/"><img src="images/insta.png" alt="instagram" class="mt-2 contact"></a>
                     <span class="text-white text-center">Instagram</span>
-                    <a href="https://wa.me/543513413350"><img src="images/whatsapp.png" alt="whatsapp" class="mt-4"></a>
+                    <a href="https://wa.me/543513413350"><img src="images/whatsapp.png" alt="whatsapp" class="mt-4 contact"></a>
                     <span class="text-white text-center">Whatsapp</span>
                     <a href="mailto:experienciatrimedia@gmail.com">
-                        <img src="images/mail.png" alt="mail" class="mt-4">
+                        <img src="images/mail.png" alt="mail" class="mt-4 contact">
                     </a>
                     <span class="text-white text-center">Mail</span>
                 </div>
@@ -51,13 +51,13 @@
         <div id="carouselExampleCaptions" class="carousel slide h-100 carousel-fade mt-2" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
+                    aria-current="true" aria-label="Slide 1" onclick="sonidoBTN()"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
+                    aria-label="Slide 2" onclick="sonidoBTN()"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+                    aria-label="Slide 3" onclick="sonidoBTN()"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
+                    aria-label="Slide 4" onclick="sonidoBTN()"></button>
             </div>
             <div class="carousel-inner h-100">
                 <div class="carousel-item active h-100">
@@ -121,7 +121,7 @@
         </div>
     </footer>
     <audio src="audio/fxTap.mp3" id="tap" muted></audio>
-    <audio src="audio/ambienceSound.ogg" loop autoplay></audio>
+    
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
