--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="carousel-inner h-100">
                 <div class="carousel-item active h-100">
                     <div class="h-100 d-flex justify-content-center">
-                        <img src="videos/loop3D-team.gif" alt="loopLogo" class="animaLogo">
+                        <img src="images/team.png" alt="loopLogo" class="animaLogo">
                     </div>
                     <div class="carousel-caption d-md-block">
                         <h5>Trimedia Team</h5>
