--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="shortcut icon" href="#" type="image/x-icon" />
 </head>
 
@@ -223,10 +222,56 @@
     <audio src="audio/fxTap.mp3" id="tap" muted></audio>
 
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    
     <script src="main.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+        var type = new Typed('#txtAnimado', {
+    strings: [
+        '<i class="txtAnimado">EXPERIENCIAS INTERACTIVAS</i>',
+        '<i class="txtAnimado">VIDEOJUEGOS PERSONALIZADOS</i>',
+        '<i class="txtAnimado">VIDEOJUEGOS PARA EVENTOS</i>',
+        '<i class="txtAnimado">VIDEOJUEGOS PUBLICITARIOS</i>',
+        '<i class="txtAnimado">VIDEOJUEGOS EDUCATIVOS</i>',
+        '<i class="txtAnimado">REALIDAD VIRTUAL</i>',
+        '<i class="txtAnimado">REALIDAD AUMENTADA</i>'],
+
+    typeSpeed: 70,
+    startDelay: 250,
+    backSpeed: 30,
+    smartBackspace: true,
+    shuffle: true,
+    backDelay: 1000,
+    loop: true,
+    loopCount: Infinity,
+    showCursor: true,
+    cursorChar: '/',
+    fadeOut: false,
+    fadeOutClass: 'typed-fade-out',
+    fadeOutDelay: 50
+})
+
+var contacto = new Typed('#txtContacto', {
+    strings: [
+        '<i class="txtAnimado">CONTACTANOS PARA VIVIR LA EXPERIENCIA TRIMEDIA</i>',
+        '<i class="txtAnimado">NUESTROS SPONSORS Y CLIENTES</i>'
+        ],
+
+    typeSpeed: 70,
+    startDelay: 250,
+    backSpeed: 30,
+    smartBackspace: true,
+    shuffle: true,
+    backDelay: 1000,
+    loop: true,
+    loopCount: Infinity,
+    showCursor: false,
+    fadeOut: false,
+    fadeOutClass: 'typed-fade-out',
+    fadeOutDelay: 50
+})
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
