--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                 </div>
                 <div class="carousel-item h-100">
                     <div class="h-100 d-flex justify-content-center contenedor">
-                        <img src="videos/vrxp.gif" alt="loopLogo" class="animaLogo">
+                        <video src="videos/vrantares.webm" class="animaLogo" loop autoplay muted></video>
+                        
                     </div>
                     <div class="carousel-caption d-md-block">
                         <h5>VR/AR</h5>
@@ -174,7 +175,7 @@
                 </div>
                 <div class="carousel-item h-100">
                     <div class="h-100 d-flex justify-content-center">
-                        <img src="videos/cuisquiz.gif" alt="loopLogo" class="animaLogo">
+                        <video src="videos/cuis.webm" class="animaLogo" loop autoplay muted></video>
                     </div>
                     <div class="carousel-caption d-md-block mt-1">
                         <h5>Gamificación</h5>
@@ -184,7 +185,7 @@
                 </div>
                 <div class="carousel-item h-100">
                     <div class="h-100 d-flex justify-content-center">
-                        <img src="videos/meopp.gif" alt="loopLogo" class="animaLogo">
+                        <video src="videos/meopp.webm" class="animaLogo" loop autoplay muted></video>
                     </div>
                     <div class="carousel-caption d-md-block">
                         <h5>WebApps</h5>
