--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                         <span class="text-white text-center">Mail</span>
                     </div>
                 </div>
+                <div class="row justify-content-center p-0 m-0">
+                    <img src="images/atras.png" alt="salir" class="contact2" onclick="cerrarPantalla()">
+                </div>
+                
             </div>
         </div>
     </section>
@@ -225,7 +229,7 @@
     <audio src="audio/fxTap.mp3" id="tap" muted></audio>
 
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
-
+    <script src="coi-serviceworker.js"></script>
     
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
