--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <div class="estrellas">
+    </div>
     <!--EFECTO ANIMADO LINEAS CAYENDO-->
     <div class="lines">
         <div class="line"></div>
@@ -24,6 +26,7 @@
     <section id="pantalla" class="frente">
         <div class=" card" id="tarjeta">
             <div class="row  d-flex flex-column justify-content-center align-content-center" id="caja">
+                
                 <!--PANTALLA CONTACTO-->
                 <div class="flex-column justify-content-end " id="idContacto">
                     <div class="row justify-content-center mt-3 pantallaArriba">
@@ -38,7 +41,7 @@
                     </div>
                     <div class="row justify-content-center mt-4">
                         <div class="col-12 me-0 me-0">
-                            <div id="carousel" class="carousel slide carousel-fade mt-2 me-0 me-0"
+                            <div id="carousel" class="carousel slide carousel-fade mt-2 me-0 me-0 adelante"
                                 data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -192,7 +195,7 @@
                 <div class="row justify-content-center p-0 m-0">
                     <img src="images/atras.png" alt="salir" class="contact2" onclick="cerrarPantalla()">
                 </div>
-                
+                <div class="grid"></div>
             </div>
         </div>
     </section>
