--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <div class="estrellas">
     </div>
     <!--EFECTO ANIMADO LINEAS CAYENDO-->
@@ -134,7 +135,7 @@
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="h-100 d-flex justify-content-center contenedor">
-                                            <img src="images/cliente2.png" alt="meopp" class="animaLogo2">
+                                            <img src="images/arquerovr2.png" alt="meopp" class="animaLogo2">
                                         </div>
                                         <div class="carousel-caption d-md-block">
                                             <h5></h5>
@@ -143,7 +144,7 @@
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="h-100 d-flex justify-content-center">
-                                            <img src="images/cliente3.png" alt="singular" class="animaLogo2">
+                                            <img src="images/cliente1.png" alt="singular" class="animaLogo2">
                                         </div>
                                         <div class="carousel-caption d-md-block mt-1">
                                             <h5></h5>
@@ -153,7 +154,7 @@
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="h-100 d-flex justify-content-center">
-                                            <img src="images/cliente4.png" alt="dubclub" class="animaLogo2">
+                                            <img src="images/cliente5.png" alt="dubclub" class="animaLogo2">
                                         </div>
                                         <div class="carousel-caption d-md-block">
                                             <h5></h5>
@@ -294,78 +295,7 @@
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
     <script src="coi-serviceworker.js"></script>
     
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-        var type = new Typed('#txtAnimado', {
-            strings: [
-                '<i class="txtAnimado">EXPERIENCIAS INTERACTIVAS</i>',
-                '<i class="txtAnimado">VIDEOJUEGOS PERSONALIZADOS</i>',
-                '<i class="txtAnimado">VIDEOJUEGOS PARA EVENTOS</i>',
-                '<i class="txtAnimado">VIDEOJUEGOS PUBLICITARIOS</i>',
-                '<i class="txtAnimado">VIDEOJUEGOS EDUCATIVOS</i>',
-                '<i class="txtAnimado">REALIDAD VIRTUAL</i>',
-                '<i class="txtAnimado">REALIDAD AUMENTADA</i>'],
-
-            typeSpeed: 70,
-            startDelay: 250,
-            backSpeed: 30,
-            smartBackspace: true,
-            shuffle: true,
-            backDelay: 1000,
-            loop: true,
-            loopCount: Infinity,
-            showCursor: true,
-            cursorChar: '/',
-            fadeOut: false,
-            fadeOutClass: 'typed-fade-out',
-            fadeOutDelay: 50
-        })
-
-        var contacto = new Typed('#txtContacto', {
-            strings: [
-                '<i class="txtAnimado">CONTACTANOS PARA VIVIR LA EXPERIENCIA TRIMEDIA</i>',
-                '<i class="txtAnimado">NUESTROS SPONSORS Y CLIENTES</i>'
-            ],
-
-            typeSpeed: 70,
-            startDelay: 250,
-            backSpeed: 30,
-            smartBackspace: true,
-            shuffle: true,
-            backDelay: 1000,
-            loop: true,
-            loopCount: Infinity,
-            showCursor: false,
-            fadeOut: false,
-            fadeOutClass: 'typed-fade-out',
-            fadeOutDelay: 50
-        })
-
-        var experiencias = new Typed('#txtExperiencias', {
-            strings: [
-                '<i class="txtAnimado">OFRECEMOS EXPERIENCIAS INMERSIVAS</i>',
-                '<i class="txtAnimado">CREAMOS MUNDOS</i>',
-                '<i class="txtAnimado">STORYTELLING Y EDUCACIÓN</i>',
-                '<i class="txtAnimado">EXPERIENCIAS INTERACTIVAS</i>',
-                ],
-
-            typeSpeed: 70,
-            startDelay: 250,
-            backSpeed: 30,
-            smartBackspace: true,
-            shuffle: true,
-            backDelay: 1000,
-            loop: true,
-            loopCount: Infinity,
-            showCursor: true,
-            cursorChar: '/',
-            fadeOut: false,
-            fadeOutClass: 'typed-fade-out',
-            fadeOutDelay: 50
-        })
-
-    </script>
-    <script src="main.js"></script>
+    <script src="main.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
