--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <div class="estrellas">
     </div>
     <!--EFECTO ANIMADO LINEAS CAYENDO-->
@@ -294,7 +293,7 @@
 
     <!-- LIBRERIA DE TYPE ANIMACION DE TEXTO -->
     <script src="coi-serviceworker.js"></script>
-    
+    <script src="typed.js"></script>
     <script src="main.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
