--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Trimedia Team">
     <meta name="keywords" content="VR,AR,interactivo,videojuegos,BTL,realidad virtual,realidad aumentada">
     <title>Trimedia Web</title>
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="shortcut icon" href="#" type="image/x-icon" />
 </head>
 
@@ -295,9 +295,7 @@
     <script src="coi-serviceworker.js"></script>
     <script src="typed.js"></script>
     <script src="main.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="bootstrap.js"></script>
 
 </body>
 
