--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
                     </div>
                 </div>
                 <button class="carousel-control-prev h-100" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="prev">
+                    data-bs-slide="prev" alt="atras">
                     <span class="carousel-control-prev-icon" aria-hidden="true" id="izq"
                         onclick="sonidoUI(this)"></span>
 
                 </button>
                 <button class="carousel-control-next h-100" type="button" data-bs-target="#carouselExampleCaptions"
-                    data-bs-slide="next">
+                    data-bs-slide="next" alt="adelante">
                     <span class="carousel-control-next-icon" aria-hidden="true" id="der"
                         onclick="sonidoUI(this)"></span>
 
