--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <div class="col-4 d-flex flex-column align-content-center">
                             </div>
                             <div class="col-4 d-flex flex-column align-content-center"><a href="vr.html"
-                                    class="d-flex justify-content-center"><img src="images/vricon.png" alt="whatsapp"
+                                    class="d-flex justify-content-center"><img src="images/vr-play.png" alt="play"
                                         class="contact" id="btn2"></a>
                                 <span class="text-white text-center mt-2">Experiencia VR Online</span>
                             </div>
