--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     </div>
                     <!-- SLIDER DE NOTICIAS Y EVENTOS -->
                     <div class="row justify-content-center m-0">
-                        <div class="col-12 col-sm-4">
+                        <div class="col-11 col-sm-4">
                             <div class="swiper ">
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
@@ -249,25 +249,44 @@
                                                 <img src="images/fondo.png" alt="noticia1" class="imgNoticia p-0 m-0">
                                             </div>
                                             <div class="col-12 d-flex flex-column align-content-center">
-                                                <h1 class="text-white text-center mt-2">Noticia 1</h1>
-                                                <p class="text-white text-center">Vivimos Tucumán un finde</p>
+                                                <h1 class="text-white text-center mt-2 pe-2 ps-2">Noticia 1</h1>
+                                                <p class="text-white text-center pe-2 ps-4">Vivimos Tucumán</p>
+                                                <button type="button" class="btn btn-outline-warning p-1 m-0" 
+                                                >Nota Completa</button>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="swiper-slide d-flex flex-column align-content-center">
-                                        <img src="images/fondo.png" alt="noticia2" class="img img-fluid">
-                                        <h1 class="text-white text-center mt-2">Noticia 2</h1>
-                                        <p class="text-white text-center">Radio Capital Margarita a los Chanchos</p>
+                                    <div class="swiper-slide col-12 col-md-4">
+                                        <div class="row w-100 m-0 p-0">
+                                            <div class="col-12 p-0">
+                                                <img src="images/fondo.png" alt="noticia1" class="imgNoticia p-0 m-0">
+                                            </div>
+                                            <div class="col-12 d-flex flex-column align-content-center">
+                                                <h1 class="text-white text-center mt-2 pe-2 ps-2">Noticia 2</h1>
+                                                <p class="text-white text-center pe-2 ps-4">Radio 88.5</p>
+                                                <button type="button" class="btn btn-outline-warning p-1 m-0" 
+                                                >Nota Completa</button>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="swiper-slide d-flex flex-column align-content-center">
-                                        <img src="images/fondo.png" alt="noticia3" class="img img-fluid">
-                                        <h1 class="text-white text-center mt-2">Noticia 3</h1>
-                                        <p class="text-white text-center">DevPlay Evento en Neuquén</p>
+                                    <div class="swiper-slide col-12 col-md-4">
+                                        <div class="row w-100 m-0 p-0">
+                                            <div class="col-12 p-0">
+                                                <img src="images/fondo.png" alt="noticia1" class="imgNoticia p-0 m-0">
+                                            </div>
+                                            <div class="col-12 d-flex flex-column align-content-center">
+                                                <h1 class="text-white text-center mt-2 pe-2 ps-2">Noticia 3</h1>
+                                                <p class="text-white text-center pe-2 ps-4">DevPlay Neuquén</p>
+                                                <button type="button" class="btn btn-outline-warning p-1 m-0" 
+                                                >Nota Completa</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <!-- If we need pagination -->
                                 <div class="swiper-pagination"></div>
-
+                                <div class="swiper-button-prev h-50 ps-3 z-3"></div>
+                                <div class="swiper-button-next h-50 pe-3 z-3"></div>
                             </div>
                         </div>
                     </div>
