--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                             </div>
                                             <div class="col-12 d-flex flex-column align-content-center">
                                                 <h3 class="text-white text-center mt-2 pe-2 ps-2">Realidad Virtual en Vorterix</h3>
-                                                <p class="text-white text-center pe-2 ps-4">Compartimos una mañana en la radio comentando las novedades en tecnología y la realidad virtual.</p>
+                                                <p class="text-white text-center pe-2 ps-4">Compartimos una mañana comentando las novedades en tecnología y la realidad virtual.</p>
                                                 <a href="https://open.spotify.com/episode/44kY4WDdGg0QhzTb92DNg9?si=ZU5gSnHPQfSJYHMlYTxGCQ&nd=1&dlsi=4a1198fcdb624a85" class="btn btn-outline-light mt-2 pe-5 ps-5" role="button">Nota Completa</a>
                                                 
                                             </div>
@@ -276,7 +276,7 @@
                                             </div>
                                             <div class="col-12 d-flex flex-column align-content-center">
                                                 <h3 class="text-white text-center mt-2 pe-2 ps-2">DEVPLAY Neuquén</h3>
-                                                <p class="text-white text-center pe-2 ps-4">Showcase de videojuegos organizado por la comunidad de desarrolladores de videojuegos Gamedev Neuquén.</p>
+                                                <p class="text-white text-center pe-2 ps-4">Showcase de videojuegos organizado por la comunidad Gamedev Neuquén.</p>
                                                 <a href="https://www.neuqueninforma.gob.ar/llega-la-primera-edicion-de-devplay-neuquen/" class="btn btn-outline-light mt-2 pe-5 ps-5" role="button">Nota Completa</a>
                                                 
                                             </div>
